--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ header {
   margin: 0;
 } */
 
+html {
+  font-size: 16px;
+  font-family: sans-serif;
+  font-size-adjust: 0.40;
+}
 body {
   width: 100vw !important;
   margin: 0;
@@ -69,6 +74,7 @@ div.container {
 #exibicaomain{
   width: auto !important;
   overflow: hidden !important;
+  font-size: 3vmax;
 }
 
 
