--- a/style.css
+++ b/style.css
@@ -78,8 +78,12 @@ div.container {
 
 
 #exibicao {
-  font-size: 0.7rem ;
+  font-size: 0.7rem :
+  word-wrap: break-word;
   overflow-wrap: break-word;
+  word-break: break-all;
+  white-space: normal;
   transition: transform 3.9s ease-in-out;
+ 
 }
 
